--- a/siteJumia.css
+++ b/siteJumia.css
@@ -243,19 +243,35 @@ p{
     .onglets{
         display: flex;
     }
+    .burger{
+        width: 20px;
+        height: 3px;
+        background-color: black;
+        margin: 3px;
+    }
+    .catégories{
+        margin-left: -35%;
+        margin-top: -230px;
+        width: 250px;
+        position: absolute;
+        display: none;
+    }
+    .affichage{
+        display: block;
+    }
     .third_div{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 330px;
+        margin-top: 110px; 
     } 
     .slide1 img{
-        width: 350px;
+        width: 100%;
         height: 200px;
     } 
     .slide2{
-        margin-top: 340px;
+        margin-top: 120px;
     }
     .sous_onglet{
         width: 150px;
@@ -277,12 +293,28 @@ p{
     .onglets{
         display: flex;
     }
+    .burger{
+        width: 20px;
+        height: 3px;
+        background-color: black;
+        margin: 3px;
+    }
+    .catégories{
+        margin-left: -70%;
+        margin-top: -180px;
+        width: 250px;
+        position: absolute;
+        display: none;
+    }
+    .affichage{
+        display: block;
+    }
     .third_div{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 290px;
+        margin-top: 80px; 
     } 
     .slide1 img{
         width: 600px;
@@ -297,10 +329,13 @@ p{
     .infos_details, .image_gif, .catégories{
         width: 250px;
     }
+    .details{
+        padding: 13px;
+    }
     .image_gif{
         margin: 0;
     }
     .slide2{
-        margin-top: 310px;
+        margin-top: 140px;
     }
 }
